# Semantics_HIPHOP

./: .gitignore  .gitmodules  Pretty.ml  README.md  README1.md  artifact_eval.html  ast.ml  clean  compile  dune  hip.ml  lexer.mll  parser.mly  runTest.ml  submission.webarchive  test.sh  timed_eff.pptx  trs.ml
bk/: hip copy.ml
sleek/: ast.ml  ast.mli  ast_helper.ml  ast_helper.mli  checker.ml  checker.mli  colors.ml  colors.mli  dune  dune-project  history.ml  history.mli  inference.ml  inference.mli  lalla.txtx  lexer.mll  main.ml  parser.mly  proofctx.ml  proofctx.mli  signals.ml  signals.mli  sleek.ml  sleek.mli  syntax.ml  syntax.mli  utils.ml  utils.mli  verifier.ml  verifier.mli
src/effects/: 0_Single_Instant.ee  10_Sequence_Kleene.ee  11_Mixed.ee  12_Alternative_Syntax.ee  13_Await.ee  14_Timed_effects_1.ee  14_Timed_simple_effects.ee  15_Timed_effects_2.ee  15_disjunctions.ee  16_Timed_effects_3.ee  17_disjunctions.ee  1_Empty_Bottoms.ee  2_False_Pi.ee  3_Sequence.ee  4_Union.ee  5_Parallel.ee  6_Sequence_Union.ee  7_Sequence_Parallel.ee  8_Kleene.ee  9_Kleene_Union_Parallel.ee  Basic_1_Concat.ee  Basic_2_Choice.ee  Basic_3_Kleen.ee  Mixed_1.ee  Mixed_2.ee  Mixed_3.ee  Mixed_4.ee  Wait_1.ee  reoccur1.ee
src/microbenchmark/: paper_example.hh
src/programs/: 0_test.hh  0_test.hh.js  100_test.hh.js  10_atom.hh  11_authenticate.hh  11_authenticate.hh.js  12_await-count-pre.hh  13_await-count.hh  13_await-count.hh.js  14_await-count2.hh  15_await-immediate.hh  16_await-par.hh  16_await-par.hh.js  17_await-seq-implicit-seq.hh  17_await-seq-implicit-seq.hh.js  (+186 more)
(+125 files in other folders)
